--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Just Java</string>
+    <string name="quantity">Quantity</string>
+    <string name="plusbutton">+</string>
+    <string name="zero">0</string>
+    <string name="minusbutton">-</string>
+    <string name="price">Price</string>
+    <string name="order">Order</string>
 </resources>
